tests/NormalTests/paczka1/fuzzy1/10294506.err
Error in line 1: 1ciPzh3HLBq S896 81,2
Error in line 6: yIqNCbaF9e6 S811 37,2
Error in line 8: yIqNCbaF9e6 S697 66,2
Error in line 10: inS S811 26,1
Error in line 12: SUvDa79 A853 2,7
Error in line 11: yIqNCbaF9e6 A853 39,6
Error in line 7: 1ciPzh3HLBq S811 78,0
Error in line 25: inS A853 20,5
Error in line 16: SUvDa79 S811 6,5
Error in line 27: yIqNCbaF9e6 S896 27,6
